[tool.poetry]
name = "compare_ms_download_center_files"
version = "0.1.0"
description = ""
authors = ["Mark Grandi <markgrandi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
warcio = "^1.7.4"
arrow = "^0.15.8"
attr = "^0.3.1"
logging-tree = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
